# flappy-bird-sdl2

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
data/: atlas.json  text.json
src/: atlas.cpp  atlas.h  common.h  defs.h  draw.cpp  draw.h  flappy_bird_stage.cpp  flappy_bird_stage.h  game.cpp  game.h  gameover.cpp  gameover.h  init.cpp  init.h  main.cpp  pipe.h  pipemanager.cpp  pipemanager.h  stage.cpp  stage.h  structs.h  textures.h  utils.cpp  utils.h
src/draw/: audio.cpp  audio.h  draw.cpp  draw.h  text.cpp  text.h  textures.cpp  textures.h
src/game/: flappy_bird_stage.cpp  flappy_bird_stage.h  game.cpp  game.h  gameintro.cpp  gameintro.h  gameover.cpp  gameover.h  pipemanager.cpp  pipemanager.h  stage.cpp  stage.h
src/system/: atlas.cpp  atlas.h  common.h  defs.h  init.cpp  init.h  structs.h
src/utils/: utils.cpp  utils.h
